# FaceNet_multifacerecog

./: .gitignore  CMakeLists.txt
model/: database.txt
src/: main.cpp
